frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  annotations:
    argocd-image-updater.argoproj.io/image-list: frontend=gcr.io/empyrean-harbor-456906-s2/frontend
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/frontend.update-strategy: latest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/empyrean-harbor-456906-s2/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
