frontend-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd-image-updater.argoproj.io/frontend.update-strategy: latest
    argocd-image-updater.argoproj.io/image-list: frontend=gcr.io/empyrean-harbor-456906-s2/frontend
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd.argoproj.io/tracking-id: job-portal:apps/Deployment:default/frontend
    deployment.kubernetes.io/revision: "12"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd-image-updater.argoproj.io/frontend.update-strategy":"latest","argocd-image-updater.argoproj.io/image-list":"frontend=gcr.io/empyrean-harbor-456906-s2/frontend","argocd-image-updater.argoproj.io/write-back-method":"git","argocd.argoproj.io/tracking-id":"job-portal:apps/Deployment:default/frontend"},"name":"frontend","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"frontend"}},"templat [...]
  creationTimestamp: "2025-05-10T08:19:11Z"
  generation: 43
  name: frontend
  namespace: default
  resourceVersion: "13415575"
  uid: a3ea625d-ee68-46ad-bea5-f2bfc12d9ad8
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - env:
        - name: PORT
          value: "3000"
        - name: VITE_API_URL
          valueFrom:
            secretKeyRef:
              key: VITE_API_URL
              name: app-secrets
        - name: BASE_URL
          valueFrom:
            secretKeyRef:
              key: BASE_URL
              name: app-secrets
        - name: NODE_ENV
          valueFrom:
            secretKeyRef:
              key: NODE_ENV
              name: app-secrets
        - name: VITE_FRONTEND_URL
          valueFrom:
            secretKeyRef:
              key: VITE_FRONTEND_URL
              name: app-secrets
        image: gcr.io/empyrean-harbor-456906-s2/frontend:76e0cb38-b900-4bac-8bac-dab95066a7dd
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: nginx-config
          subPath: nginx
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-config
        name: nginx-config
status:
  conditions:
  - lastTransitionTime: "2025-05-15T18:42:31Z"
    lastUpdateTime: "2025-05-15T19:10:16Z"
    message: ReplicaSet "frontend-bcf99fc95" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-05-15T19:10:17Z"
    lastUpdateTime: "2025-05-15T19:10:17Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 43
  replicas: 3
  unavailableReplicas: 3
  updatedReplicas: 3
