source_builds_76e0cb38-b900-4bac-8bac-dab95066a7dd_backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  annotations:
    argocd-image-updater.argoproj.io/image-list: backend=gcr.io/empyrean-harbor-456906-s2/backend
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/backend.update-strategy: latest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: backend
          image: gcr.io/empyrean-harbor-456906-s2/backend:76e0cb38-b900-4bac-8bac-dab95066a7dd
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              # mountPath: D:\GitHub\JobPortal\frontend\nginx.conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
