frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend
